Imp css fix to reduce flicker

--- a/src/vdom-app/sans/sans-style.css
+++ b/src/vdom-app/sans/sans-style.css
@@ -3,6 +3,10 @@
   --primary-bg-color: burlywood;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 .sans {
   /* padding: 0 1em; */
   color: var(--primary-text-color);
